--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,7 +17,8 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
-          <th scope="col">Delete</th>  <!-- Added title -->
+          <th scope="col">Edit</th>  <!-- Added edit column -->
+          <th scope="col">Delete</th>  <!-- Added title column-->
         </tr>
       </thead>
       <tbody>
@@ -25,9 +26,17 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+
+            <!-- Added buttom to go to Edit Page-->
+            <td><form method="GET" action='/urls/<%= url %>' >
+              <button type="submit" class="btn btn-outline-primary">Edit</button>
+            </form></td> 
+            
+            <!-- Added buttom to Delete -->
             <td><form method="POST" action='/urls/<%= url %>/delete' >
-              <button type="submit" class="btn btn-primary">Delete</button>
-            </form></td> <!-- Added buttom -->
+              <button type="submit" class="btn btn-outline-danger">Delete</button>
+            </form></td> 
+
           </tr>
         <% } %>
       </tbody>
