--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,6 +8,27 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+
+        <!-- Create a login form -->
+        <form class="form-inline" action="/login" method="POST">
+          <div class="form-group mb-2">
+            <input class="form-control" type="text" name="username" placeholder="username" style="width: 300px; margin: 1em">
+            <button type="submit" class="btn btn-outline-dark">Login</button>
+          </div>
+        </form>
+
+        <!-- 
+        <form class="form-inline" action="/login" method="POST">
+          <div class="form-group mb-2">
+            <label> Logged In As: <%= templateVars.username %> </label>
+            <button type="submit" class="btn btn-outline-dark">Logout</button>
+          </div>
+        </form> 
+        -->
+
+
+        
+
       </div>
     </div>
   </nav>
