--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -9,7 +9,8 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
 
-        <!-- Create a login form -->
+
+        <% if (!username) { %>
         <form class="form-inline" action="/login" method="POST">
           <div class="form-group mb-2">
             <input class="form-control" type="text" name="username" placeholder="username" style="width: 300px; margin: 1em">
@@ -17,14 +18,21 @@
           </div>
         </form>
 
-        <!-- 
-        <form class="form-inline" action="/login" method="POST">
-          <div class="form-group mb-2">
-            <label> Logged In As: <%= templateVars.username %> </label>
-            <button type="submit" class="btn btn-outline-dark">Logout</button>
-          </div>
-        </form> 
-        -->
+        <% } else { %>
+          <form class="form-inline" action="/logout" method="POST">
+            <div class="form-group mb-2">
+              <label> Logged In As: <%= username %>   </label>
+              <button type="submit" class="btn btn-outline-dark">Logout</button>
+            </div>
+          </form>
+
+          <% } %>
+
+  
+
+
+
+ 
 
 
         
