--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,34 +8,32 @@
 
 <body>
   <%- include('partials/_header') %>
-  <div class="card text-center">
 
-      <!-- Edit shortURL-->
-      <div class="card-header"></div>
-      <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-        <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
-      </div>
-    <div class="card-footer text-muted">
+<div class="card text-center">
+<!-- LOGIN FORM -->
+<div class="text-center" style="padding:100px 0">
+	<div class="logo">Registration Form</div>
+	<!-- Main Form -->
+	
+		<form action="/register" method="POST">
+			
+					<div class="form-group">
+						<input type="email" name="email" placeholder="youremail@email.com">
+					</div>
+					<div class="form-group">
+						<input type="password" name="password" placeholder="password">
+          </div>
+          <div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
 
-      <div class="form-group mb-2 text-align: center" >
-        <h3 class="card-title">Edit</h3>
-        <div class="card-body">
-
-          <!-- Edit longURL -->
-          <div class= 'formatText'>
-          <form class="form-inline" action="/urls/<%= shortURL %>" method="POST">
-            <div class="form-group mb-2">
-              <label for="longURL">New URL:</label>
-              <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </div> 
-            </form>   
-      </div>
-      </div>
-
-
-    </div>
+    </form>
+    
+    
+	
+	<!-- end:Main Form -->
+</div>
+      
       
   </div>
   <!-- Bootstrap JS -->
