--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,7 +12,7 @@
 <div class="card text-center">
 <!-- LOGIN FORM -->
 <div class="text-center" style="padding:100px 0">
-	<div class="logo">Registration Form</div>
+	<div class="logo"><h3>Registration</h3></div>
 	<!-- Main Form -->
 	
 		<form action="/register" method="POST">
