--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
 <div class="card text-center">
 <!-- LOGIN FORM -->
 <div class="text-center" style="padding:100px 0">
-	<div class="logo"><h3>Register</h3></div>
+	<div class="logo"><h3>Login</h3></div>
 	<!-- Main Form -->
 	
 		<form action="/register" method="POST">
@@ -24,7 +24,7 @@
 						<input type="password" name="password" placeholder="password">
           </div>
           <div>
-            <button type="submit" class="btn btn-primary">Register</button>
+            <button type="submit" class="btn btn-primary">Logint</button>
           </div>
 
     </form>
