--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,9 +11,14 @@
 
 
         <% if (!username) { %>
-        <form class="form-inline" action="/login" method="POST">
+          <form class="form-inline" action="/register" method="GET">
+            <div class="form-group mb-2">
+              <button type="submit" class="btn btn-outline-dark">Register</button>
+            </div>
+          </form>
+
+        <form class="form-inline" action="/login" method="GET">
           <div class="form-group mb-2">
-            <input class="form-control" type="text" name="username" placeholder="username" style="width: 300px; margin: 1em">
             <button type="submit" class="btn btn-outline-dark">Login</button>
           </div>
         </form>
