--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
 	<div class="logo"><h3>Login</h3></div>
 	<!-- Main Form -->
 	
-		<form action="/register" method="POST">
+		<form action="/login" method="POST">
 			
 					<div class="form-group">
 						<input type="email" name="email" placeholder="youremail@email.com">
@@ -24,7 +24,7 @@
 						<input type="password" name="password" placeholder="password">
           </div>
           <div>
-            <button type="submit" class="btn btn-primary">Logint</button>
+            <button type="submit" class="btn btn-primary">Login</button>
           </div>
 
     </form>
