--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -15,8 +15,8 @@
     <%- include('partials/_header') %>
 
     <main style="margin: 1em;">
-      <h3>Create TinyURL</h3>
-      <form class="form-inline" action="/urls" method="POST">
+      <h3 class="row align-items-center justify-content-center">Create TinyURL</h3>
+      <form class="form-inline row align-items-center justify-content-center" action="/urls" method="POST">
         <div class="form-group mb-2">
           <label for="longURL">Enter a URL:</label>
           <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
