--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -26,7 +26,7 @@
           <h3 class="card-title">Edit</h3>
           <div class="card-body">
             <div class= 'formatText'>
-            <form class="form-inline" action="/urls/<%= shortURL %>" method="POST">
+            <form class="form-inline row align-items-center justify-content-center" action="/urls/<%= shortURL %>" method="POST">
               <div class="form-group mb-2">
                 <label for="longURL">New URL:</label>
                 <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
