--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -39,7 +39,7 @@
               <td><form method="GET" action='/urls/<%= url %>' >
                 <button type="submit" class="btn btn-outline-primary">Edit</button>
               </form></td> 
-              <td><form method="POST" action='/urls/<%= url %>/delete' >
+              <td><form method="POST" action='/urls/<%= url %>?_method=DELETE' >
                 <button type="submit" class="btn btn-outline-danger">Delete</button>
               </form></td> 
             </tr>
